# additive-build-advisor

./: .gitignore  LICENSE  README.md  REPORT.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/: calibration_cube.stl  cantilever_benchmark.stl  gantry_bracket.stl  hollow_housing.stl  tall_standoff.stl
docs/: index.html
examples/: make_build_animation.py  make_comparison_figure.py  make_diagram.py  make_pipeline_figure.py  make_report_pdf.py  make_sample_parts.py  make_thread_flow.py  make_twin_dashboard.py  run_example.py  tolerances_bracket.json  tolerances_housing.json  validate_fea.py
src/abadvisor/: __init__.py  am_sim.py  cli.py  dfam.py  digital_thread.py  fea.py  geometry.py  inspection.py  materials.py  orientation.py  pipeline.py  report.py  runtime_twin.py  shapes.py  stl_io.py  voxelize.py
tests/: test_smoke.py
