[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "additive-build-advisor"
version = "0.1.0"
description = "A design-to-inspection digital thread for additive manufacturing: STL in, build simulation + DfAM checks + inspection plan + a gated digital-thread record out."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Seymur Hasanov" }]
dependencies = ["numpy>=1.24", "scipy>=1.10", "scikit-fem>=8.0", "matplotlib>=3.6"]

[project.scripts]
build-advisor = "abadvisor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
